--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ label {
 .chosen-color {
     width: 40px;
     height: 40px;
-    border: 3px solid black;
+    border: 2px solid rgb(150, 150, 150);
     border-radius: 50%;
     /* background-color: transparent; */
 }
